Fix colour contrast issues in media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,7 +414,7 @@ input[type="text"], input[type="email"] {
    }
     #menu li {
         float: right;
-        background-color: #3AA6B9;
+        background-color: #333F48;
         padding: 8px;
         margin-right: 20px;
         margin-top: 30px;
